--- a/pages/Door/Auth/Auth.wxml
+++ b/pages/Door/Auth/Auth.wxml
@@ -1,3 +1,3 @@
 <!--pages/Door/Auth/Auth.wxml-->
 <text>pages/Door/Auth/Auth.wxml</text>
-<view><text>这是一行文字</text></view>
+<view><text>文字区</text></view>
