--- a/pages/driverForm/driverForm.wxml
+++ b/pages/driverForm/driverForm.wxml
@@ -4,12 +4,21 @@
     <view wx:for="{{wayBill}}">
       <view class='orders'>
        
-        <view>{{item.position}}</view>
-        <view>{{item.Endposition}}</view>
-        <view>接单</view>
+        <view>{{item.start_position}}</view>
+        <view>{{item.end_position}}</view>
+        <view>{{item.update_time}}</view>
+        <view bindtap='orderReceiving' id='{{item._id}}'>接单</view>
+        <!-- 滑动按钮 -->
+       <!-- <view>  -->
+     
+      <!-- </view> -->
       </view>
+      <!-- <view class="jiedan">
+        <button class="mini-btn" type="default" size="mini" bindtap="accpetOrder" >接单</button>
+      </view> -->
 
     </view>
+    
 
   </view>
 </view>
