--- a/pages/driverForm/driverForm.wxss
+++ b/pages/driverForm/driverForm.wxss
@@ -1,8 +1,61 @@
 /* pages/driverForm/driverForm.wxss */
+.form{
+  position: relative;
+}
 .orders{
   width: 100%;
   height: 80px;
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 10px;
   margin: 10px;
+}
+.content{
+  margin-top:100rpx;
+  font-size:24rpx;
+
+}
+.sliderContent{
+  position:relative;
+  margin:0 auto;
+  margin-bottom:50rpx;
+  padding-left:60rpx;
+  width:425rpx;
+  line-height:70rpx;
+  border-radius: 60rpx;
+  background-color: #fff;
+  color:#289adc;
+  box-shadow:0px 4px 6px 0px rgba(37,114,219,0.3);
+}
+.sliderContent input{
+  line-height:70rpx;
+  height:70rpx;
+  box-sizing:border-box;
+  padding-left:40rpx;
+  width:250rpx;
+}
+.input-placeholder{
+  text-align:center;
+  color:#289adc;
+}
+.slider{
+  position:absolute;
+  top:0;
+  left:0;
+  width:150rpx;
+  border-radius: 60rpx;
+  text-align:center;
+  background-color: #7f7f7f;
+  color:#fff;
+  box-shadow:0px 4px 6px 0px rgba(37,114,219,0.3);
+}
+.jiedan{
+  margin-top: 0px;
+  width: 30%;
+  height: 20px;
+  background-color: aqua;
+  float:right;
+}
+.mini-btn{
+  justify-content: center;
+  margin-right: 10rpx;
 }
