--- a/pages/myway/myway.wxss
+++ b/pages/myway/myway.wxss
@@ -1,7 +1,21 @@
-/* pages/personal/myway/myway.wxss */
+
 .orderRecord{
   width:100%;
-  height: 100px;
-  background-color: rgba(255, 255, 255, 0.5);
+  height: flex;
+  background-color: pink;
   margin-bottom: 10px;
+}
+.order{
+  text-align: center;
+  color:grey;
+  font-size: 15px;
+}
+.lev{
+  margin-left: 15px;
+}
+.title{
+  padding-left:150px ;
+}
+.iconfont{
+  margin-left: 10px;
 }
