--- a/pages/personal/personal.wxml
+++ b/pages/personal/personal.wxml
@@ -46,7 +46,7 @@
     <view class="divLine"></view>
     <view class='selection' bindtap='mymessage'>
       <image class="images" src='../images/message.png' ></image>
-      <view class='fontStyle'>消息中心</view>
+      <view class='fontStyle' >消息中心</view>
       <view class='tendto t4'>
         <image class="images" src='../images/enter.png' ></image>
       </view>
@@ -61,9 +61,9 @@
       </view>
     </view>
    <view class="divLine"></view>
-   <view class='selection' bindtap='regulation'>
+   <view class='selection' bindtap='sign'>
       <image class="images" src='../images/message.png' ></image>
-      <view class='fontStyle'>平台规则</view>
+      <view class='fontStyle'>签到</view>
       <view class='tendto t4'>
         <image class="images" src='../images/enter.png' ></image>
       </view>
