--- a/pages/campus/campus.wxss
+++ b/pages/campus/campus.wxss
@@ -1,8 +1,10 @@
-/* pages/campus/campus.wxss */
 .projectItem{
   width:100%;
-  height: 50px;
-  background-color: rgba(255, 255, 255, 0.5);
-  margin-bottom: 10px;
-  border-radius: 15px;
+  height: 100rpx;
+  line-height: 100rpx;
+  background-color:#FF9999;
+  color: #555555;
+  font-size: 40rpx;
+  margin: 20rpx 0;
+  text-align: center;
 }
