--- a/pages/personal/personal.wxml
+++ b/pages/personal/personal.wxml
@@ -1,85 +1,58 @@
-<!--pages/personal/personal.wxml-->
 <!-- 头像，号码，普通用户 -->
 <view class='ct'>
   <view class='head'>
     <view class='headimage'>
 
       <view class='frofile_photo'>
-        <image src='{{userInfo.avatarUrl}}' ></image>
-      </view>
-     
-     
-      <view class='choose' hidden='{{chooseBtn}}'><text>同意上线</text>
-        <switch  checked="{{switch1Checked}}" bindchange="aa"></switch>
+        <image src='{{userInfo.avatarUrl}}'></image>
       </view>
 
+      <view class='choose'><text>同意上线</text>
+        <switch checked="{{switch1Checked}}" bindchange="aa"></switch>
+      </view>
+     
     </view>
   </view>
 
   <!-- 功能 -->
   <view class='middle' style>
-   
-    <view class="divLine"></view>
-    <view class='selection ' bindtap='personal'>
-      <image class="images" src='../images/personmessage.png' ></image>
-      <view class='fontStyle'>校园认证</view>
-      <view class='tendto t1'>
-        <image class="images"  src='../images/enter.png' ></image>
-      </view>
-    </view>
-    <!-- <view class="divLine"></view>
-    <view class='selection' bindtap='indentification'>
-      <image class="images" src='../images/message.png' ></image>
-      <view class='fontStyle'>车手认证</view>
-      <view class='tendto t4'>
-        <image class="images" src='../images/enter.png' ></image>
-      </view>
-    </view> -->
-    <view class="divLine"></view>
-    <view class='selection ' bindtap='mymoney'>
-      <image class="images" src='../images/walk.png' ></image>
-      <view class='fontStyle'>我的钱包</view>
-      <view class='tendto t2'>
-        <image class="images" src='../images/enter.png' ></image>
-      </view>
-    </view>   
-    <view class="divLine"></view>
-    <view class='selection' bindtap='mymessage'>
-      <image class="images" src='../images/message.png' ></image>
-      <view class='fontStyle' >消息中心</view>
-      <view class='tendto t4'>
-        <image class="images" src='../images/enter.png' ></image>
-      </view>
-    </view>
-   <view class="divLine"></view>
-   <view class="divLine"></view>
-    <view class='selection' bindtap='set'>
-      <image class="images" src='../images/message.png' ></image>
-      <view class='fontStyle' >密码设置</view>
-      <view class='tendto t4'>
-        <image class="images" src='../images/enter.png' ></image>
-      </view>
-    </view>
-   <view class="divLine"></view>
-   <view class='selection' bindtap='sign'>
-      <image class="images" src='../images/message.png' ></image>
-      <view class='fontStyle'>签到</view>
-      <view class='tendto t4'>
-        <image class="images" src='../images/enter.png' ></image>
-      </view>
-    </view>
-   <view class="divLine"></view>
-   <view class="divLine"></view>
-    <view class='selection' bindtap='service'>
-      <image class="images" src='../images/message.png' ></image>
-      <view class='fontStyle'>咨询反馈</view>
-      <view class='tendto t4'>
-        <image class="images" src='../images/enter.png' ></image>
-      </view>
-    </view>
-   <view class="divLine"></view>
 
-   
+    <view class="line"></view>
+    <view class='selection' bindtap='personal'>
+      <view class='iconfont icon-renzhengtubiao- fontStyle'>校园认证</view>
+      <view class='iconfont icon-dayu'></view>
+    </view>
+
+    <view class="line"></view>
+    <view class='selection' bindtap='mymoney'>
+      <view class='iconfont icon-huaban fontStyle'>我的钱包</view>
+      <view class='iconfont icon-dayu'></view>
+    </view>
     
+    <view class="line"></view>
+    <view class='selection' bindtap='mymessage'>
+      <view class='iconfont icon-xiaoxizhongxin fontStyle'>消息中心</view>
+      <view class='iconfont icon-dayu'></view>
+    </view>
+    
+    <view class="line"></view>
+    <view class='selection ' bindtap='set'>
+      <view class='iconfont icon-mimashezhi fontStyle'>密码设置</view>
+      <view class='iconfont icon-dayu'></view>
+    </view>
+    
+    <view class="line"></view>
+    <view class='selection ' bindtap='sign'>
+      <view class='iconfont icon-qiandao fontStyle'>签到</view>
+      <view class='iconfont icon-dayu'></view>
+    </view>
+    
+    <view class="line"></view>
+    <view class='selection ' bindtap='service'>
+      <view class='iconfont icon-zixunfankui fontStyle'>咨询反馈</view>
+      <view class='iconfont icon-dayu'></view>
+    </view>
+    <view class="line"></view>
+
   </view>
 </view>
