--- a/pages/personal/personal.wxss
+++ b/pages/personal/personal.wxss
@@ -1,83 +1,63 @@
-/* pages/personal/personal.wxss */
-
 .head{
   width:100%;
-  height:156px;
-  font-size:15px;
+  height:300rpx;
+  font-size:30rpx;
 }
+
 .headimage{
 position: relative;
- margin-top: 20px;
+ margin-top: 40rpx;
  float: left;
  width: 50%;
  display: flex;
 }
-.headimage .frofile_photo{
+
+.frofile_photo{
   flex:1;
 }
+
 .headimage image{
   width: 80px;
   height: 80px;
-  margin-left: 10px;
+  margin-left: 20rpx;
   background-color: white;
   border-radius:80px 80px 80px 80px;
 }
-.headimage .choose{
-  flex: 1;
+.choose{
+  flex:1;
   margin-left: 200px;
   margin-top: 25px;
-
 }
 .choose text{
   font-size: 14px;
 }
 
 
-
+.line{
+  background: #EEEEEE;
+  width: 100%;
+  height: 1px;
+ }
 
 .selection{
-  /* position: relative;
-  margin-top:2%; */
-  left:10px;
   width:100%;
+  height: 100rpx;
+  line-height: 100rpx;
   display: flex;
-  font-size:15px;
-  height: 50px;
- 
-  margin-left: 10px;
+  margin-left: 20rpx;
 }
-.tendto{
-  position:relative;
-  left:30%;
-  
-}
-.total{
- 
-  top :0px;
-  bottom: 0px;
-  
-}
-.images{
-  width: 20px; 
-  height: 20px;
-  margin: 15px;
-   
-   
-}
-/* .selection{
 
-} */
 .fontStyle{
-  width:30%;
-  margin:15px;
-  margin-left: 0px;
-  font-size: 15px;
+  width:80%;
+  font-size:40rpx;
+  color: #555555;
 }
 
 
-.divLine{
- background: #E0E3DA;
- width: 100%;
- height: 1px;
-}
+
+
+
+
+
+
 
