--- a/pages/set/set.wxss
+++ b/pages/set/set.wxss
@@ -1,7 +1,36 @@
-/* pages/set/set.wxss */
-.setSecurity{
-  margin-top:20px;
-margin-left:10%;
-width:80%;
+.title{
+  text-align: center;
+  color: #333333;
+  font-size: 44rpx;
+  margin-top: 20rpx;
+}
 
+.item{
+  margin: 40rpx 20rpx;
+}
+
+.content{
+  color: #555555;
+  font-size: 40rpx;
+  margin: 20rpx 0;
+}
+
+.input-placeholder{
+  color:#888888;
+  font-size:34rpx;
+}
+
+.line{
+  background-color: #EEEEEE;
+  width: 100%;
+  height: 1px;
+}
+
+.btn{
+  width: 95%;
+  height: 80rpx;
+  line-height: 80rpx;
+  background-color: #FF9999;
+  color: white;
+  font-size: 40rpx;
 }
