--- a/pages/showmessage/showmessage.wxss
+++ b/pages/showmessage/showmessage.wxss
@@ -1,47 +1,35 @@
-/* pages/personal/personmessage/psm.wxss */
-.messageTop{
-  height: 60px;
-  width: 100%;
+.line {
+  background-color: #EBEBEB;
+  height: 1px;
+  margin-right: 20rpx;
+  margin-left: 20rpx;
 }
 
-.message{
+.message {
   width: 60%;
-margin:20rpx 10%;
+  margin: 20rpx 10%;
   display: flex;
-font-size: 13px;
-}
-.end{
-  margin-top: 49%;
-  text-align: center;
-  color: white;
-  background-color:red;
-  width:100%;
-  height:40px;
-  position: fixed;
-  bottom: 0rpx;
-    line-height: 40px;
+  font-size: 40rpx;
+  color: #555555;
 }
 
-.end2{
-  margin-top: 49%;
-  text-align: center;
-  color: white;
-  background-color:#9AC81F;
-  width:100%;
-  height:40px;
-  position: fixed;
-  bottom: 74rpx;
-  line-height: 40px;
-
+.section {
+  margin-left: 80rpx;
+  width: 160rpx;
+}
+.section_school{
+  margin-left: 10rpx;
+}
+.section_phone{
+  margin-left: 40rpx;
 }
 
-.line{
-    
-  background-color:#EBEBEB;
-  height:1px;
-}
-
-.section{
-  margin-left:30px;
-  width:80px;
+.btn{
+  margin-top: 40rpx;
+  width: 90%;
+  height: 70rpx;
+  line-height: 70rpx;
+  background-color: #FF9999;
+  color: #555555;
+  font-size: 40rpx;
 }
