--- a/pages/userInfo/userInfo.wxss
+++ b/pages/userInfo/userInfo.wxss
@@ -1,10 +1,38 @@
-/* pages/userInfo/uwerInfo.wxss */
-.line{
-  background: white;
- width: 100%;
- height: 1px;
+.ct{
+  background-color: #fff;
 }
-.content{
-  height: 40px;
+
+.line {
   width: 100%;
+  height: 1px;
+  background-color: #EEEEEE;
+}
+
+.content {
+  width: 90%;
+  height: 80rpx;
+  line-height: 80rpx;
+  margin-left: 20rpx;
+  font-size: 40rpx;
+  color: #555555;
+}
+
+.title_type1{
+  padding-right: 160rpx;
+}
+.title_type2{
+  padding-right: 80rpx;
+}
+.title_type3{
+  padding-right: 35rpx;
+}
+
+.btn{
+  height: 80rpx;
+  line-height: 80rpx;
+  width: 90%;
+  color: #555;
+  font-size: 40rpx;
+  background-color: #FF9999;
+  margin: 40rpx auto;
 }
